@@ -2,41 +2,65 @@ language: cpp
 sudo: false  # docker VM
 git:
   depth: 99999
+
 matrix:
   include:
-  - os: linux
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-        packages:
-          - g++-8
-          - autoconf-archive
-    env: HOST="" MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
-    compiler: gcc
-  - os: linux
-    dist: xenial
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-        packages:
-          - g++-mingw-w64
-          - autoconf-archive
-    env:
-      - HOST="x86_64-w64-mingw32"
-      - MINGW_ON_LINUX="1"
-      - MATRIX_EVAL="unset CC && unset CXX"
-  - os: osx
-    osx_image: xcode10
-    env: HOST="" MATRIX_EVAL="brew install autoconf-archive"
-    compiler: clang
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+            - autoconf-archive
+      env: HOST="" MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+      compiler: gcc
+    - os: linux
+      dist: xenial
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-mingw-w64
+            - autoconf-archive
+      env:
+        - HOST="x86_64-w64-mingw32"
+        - MINGW_ON_LINUX="1"
+        - MATRIX_EVAL="unset CC && unset CXX"
+    - os: osx
+      env: HOST="" MATRIX_EVAL="brew update && brew install autoconf-archive"
+      osx_image: xcode8  # macOS 10.11
+      compiler: clang
+    - os: osx
+      env: HOST="" MATRIX_EVAL="brew update && brew install autoconf-archive"
+      osx_image: xcode9.2  # macOS 10.12
+      compiler: clang
+    - os: osx
+      osx_image: xcode10  # macOS 10.13
+      env: HOST="" MATRIX_EVAL="brew update && brew install autoconf-archive"
+      compiler: clang
+    - os: osx
+      env: HOST="" MATRIX_EVAL="brew update && brew install autoconf-archive"
+      osx_image: xcode11.3  # macOS 10.14
+      compiler: clang
+
 before_install:
   - eval "${MATRIX_EVAL}"
-script:  pwd && echo MINGW_ON_LINUX=$MINGW_ON_LINUX && mkdir $PWD/inst && (./autogen.sh --host=$HOST --disable-debug --prefix=$PWD/inst || (cat config.log; false)) && make && ([ x = x$MINGW_ON_LINUX ] && (make check || (for i in src/*.log; do echo === $i ===; cat $i; done; false)) || true) && make install && find inst
+script:
+  - |
+    pwd && \
+    echo MINGW_ON_LINUX=$MINGW_ON_LINUX && \
+    mkdir $PWD/inst && \
+    (./autogen.sh --host=$HOST --disable-debug --prefix=$PWD/inst || (cat config.log; false)) && \
+    make && \
+    ([ x = x$MINGW_ON_LINUX ] && \
+     (make check || (for i in src/*.log; do echo === $i ===; cat $i; done; false)) || true) && \
+    make install && \
+    find inst
 notifications:
   email:
     recipients:
-      - radarsat1@gmail.com
+      - elijahr@gmail.com
     on_success: never
     on_failure: change
