@@ -1,0 +1,4 @@
+#include <time.h>
+int main() {
+  clockid_t id = CLOCK_REALTIME;
+}
