@@ -29,6 +29,12 @@ lo_timetag lo_get_tt_immediate()
 #endif
 #include <time.h>
 
+#if defined(__MACH__) && !defined(HAVE_CLOCK_REALTIME)
+// on OS X <= 10.11, use mach clock_get_time
+#include <mach/clock.h>
+#include <mach/mach.h>
+#endif
+
 #define JAN_1970 0x83aa7e80     /* 2208988800 1970 - 1900 in seconds */
 
 double lo_timetag_diff(lo_timetag a, lo_timetag b)
@@ -40,7 +46,7 @@ double lo_timetag_diff(lo_timetag a, lo_timetag b)
 void lo_timetag_now(lo_timetag * t)
 {
 #if defined(WIN32) || defined(_MSC_VER)
-    /* 
+    /*
        FILETIME is the time in units of 100 nsecs from 1601-Jan-01
        1601 and 1900 are 9435484800 seconds apart.
      */
@@ -54,10 +60,28 @@ void lo_timetag_now(lo_timetag * t)
     t->sec = (uint32_t) dtime;
     t->frac = (uint32_t) ((dtime - t->sec) * 4294967296.);
 #else
-    struct timeval tv;
-
-    gettimeofday(&tv, NULL);
-    t->sec = tv.tv_sec + JAN_1970;
-    t->frac = tv.tv_usec * 4294.967295;
+#ifdef HAVE_CLOCK_REALTIME
+    struct timespec ts;
+    clock_gettime(CLOCK_REALTIME, &ts);
+    t->sec = ts.tv_sec;
+    t->frac = ts.tv_nsec * 4294967.295;
+#else
+#ifdef __MACH__
+    // on OS X <= 10.11, use mach clock_get_time
+    clock_serv_t clock_serv;
+    mach_timespec_t mts;
+    host_get_clock_service(mach_host_self(), CALENDAR_CLOCK, &clock_serv);
+    clock_get_time(clock_serv, &mts);
+    mach_port_deallocate(mach_task_self(), clock_serv);
+    t->sec = mts.tv_sec;
+    t->frac = mts.tv_nsec * 4294967.295;
+#else
+  // Fallback to gettimeofday()
+  struct timeval tv;
+  gettimeofday(&tv, NULL);
+  t->sec = tv.tv_sec + JAN_1970;
+  t->frac = tv.tv_usec * 4294.967295;
+#endif
+#endif
 #endif
 }
